fix input not selectable on firefox

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,3 +16,7 @@ a {
 }
 
 li.command{float:right;}
+
+div#input{
+min-height: 10px;
+}
